[package]
name = "accelerate-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = "0.16.0"
blas-src = { version = "0.9", features = ["accelerate"] }
